--- a/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/private/perfil.xhtml
+++ b/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/private/perfil.xhtml
@@ -50,21 +50,8 @@
 				<h:outputText value="#{entidade.nome}" />
 			</p:column>
 			<p:column>
-				<f:facet name="header">Email</f:facet>
-				<h:outputText value="#{entidade.email}" />
-			</p:column>
-			<p:column>
-				<f:facet name="header">Nascimento</f:facet>
-				<h:outputText value="#{entidade.nascimento}">
-					<f:convertDateTime pattern="dd/MM/yyyy" />
-				</h:outputText>
-			</p:column>
-			<p:column>
-				<f:facet name="header">Opções</f:facet>
-				<p:commandButton value="Remover" ajax="false"
-					action="#{usuarioBean.remove(entidade)}"></p:commandButton>
-				<p:commandButton value="Editar" ajax="false"
-					action="#{usuarioBean.editar(entidade.id)}"></p:commandButton>
+				<f:facet name="header">Sexo</f:facet>
+				<h:outputText value="#{entidade.sexo}" />
 			</p:column>
 		</p:dataTable>
 	</h:form>
