--- a/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/public/login.xhtml
+++ b/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/public/login.xhtml
@@ -2,43 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui" xmlns:o="http://omnifaces.org/ui"
+	xmlns:of="http://omnifaces.org/functions"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
 <h:head>
-	<title>Login </title>
+	<title>Login</title>
 </h:head>
+
 
 <h:body>
 	<p:messages />
+	<p:panel header="Login"
+		style="width: 30%; text-align:center; margin: auto;">
+		<h:form id="formLogin" prependId="false"
+			onsubmit="action='j_security_check';">
 
-	<h:form>
-		<div class="box-parent-login">
-		<div class="well bg-white box-login">
-			<h1 class="ls-login-logo">Bom Treino APP</h1>
-			<form role="form">
-				<fieldset>
- 
-					<div class="form-group ls-login-user">
-						<label for="userLogin">Usuário</label>
-						<input class="form-control ls-login-bg-user input-lg" id="userLogin" type="text" aria-label="Usuário" placeholder="Usuário">
-					</div>
- 
-					<div class="form-group ls-login-password">
-						<label for="userPassword">Senha</label>
-						<input class="form-control ls-login-bg-password input-lg" id="userPassword" type="password" aria-label="Senha" placeholder="Senha">
-					</div>
- 
-					<a href="#" class="ls-login-forgot">Esqueci minha senha</a>
- 
-					<input type="submit" value="Entrar" class="btn btn-primary btn-lg btn-block">
-					<p class="txt-center ls-login-signup">Não possui um usuário no Bom Treino APP?
-						<a href="#">Cadastre-se agora</a>
-					</p>
- 
-				</fieldset>
-			</form>
-		</div>
-		</div>
-		
-	</h:form>
+			<h:panelGrid columns="2" style="text-align:center; margin: auto;">
+				<h:outputLabel for="j_login" value="Login:" />
+				<h:inputText id="j_login" />
+
+				<h:outputLabel for="j_senha" value="Senha:" />
+				<h:inputSecret id="j_senha" />
+				<p:commandButton id="btnLogin" value="Login" ajax="false"
+					icon="fa fa-sign-in" />
+			</h:panelGrid>
+		</h:form>
+	</p:panel>
 </h:body>
 </html>
