--- a/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/admin/gerenciadorUsuario.xhtml
+++ b/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/admin/gerenciadorUsuario.xhtml
@@ -4,18 +4,26 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Gerenciador de Usuários</title>
+	<title>Gerenciador de Usuário </title>
 </h:head>
 
 
 <h:body>
 	<p:messages />
+	
+	<h:form id="formMenu">
+		<p:menubar>
+			<f:facet name="options">
+						Olá, #{usuarioBean.userLogin}
+						<p:commandButton id="menuItemLogout" value="Logout"
+					icon="fa fa-fw fa-sign-out" action="#{usuarioBean.efetuarLogout}"
+					ajax="false" />
+			</f:facet>
+		</p:menubar>
+	</h:form>
 
 	<h:form>
-		<p:panelGrid columns="2" >
-			<f:facet name="caption">
-				<h:outputText value="Filtros" />
-			</f:facet>
+		<p:panelGrid columns="2" rendered="#{usuarioBean.isUserInRole('PROFESSOR')}">
 			<f:facet name="header">
 				<h:outputText value="Usuário" />
 			</f:facet>
@@ -25,18 +33,39 @@
 				label="Nome" style="width:350px" />
 
 			<p:outputLabel value="E-mail: " for="emailField" />
-			<p:inputText id="emailField" value="#{usuarioBean.entidade.sexo}"
+			<p:inputText id="emailField" value="#{usuarioBean.entidade.email}"
 				label="Nome" style="width:350px" />
 
+			<p:outputLabel value="Nascimento: " for="nascimentoField" />
+			<p:calendar id="nascimentoField"
+				value="#{usuarioBean.entidade.nascimento}" label="Nascimento" />
+				
+			<p:outputLabel value="Login: " for="loginField" />
+			<p:inputText id="loginField"
+				value="#{UsuarioBean.entidade.username}" label="Login"
+				style="width:350px" />
+
+			<p:outputLabel value="Senha: " for="senhaField" />
+			<p:password id="senhaField"
+				value="#{senhaBean.entidade.senha}" label="Senha"
+				style="width:350px" />
+
+			<p:outputLabel value="Grupo: " for="grupoField" />
+			<p:selectOneMenu id="grupoField" value="#{UsuarioBean.entidade.grupo}"
+				label="Grupo" style="width:350px">
+				<f:selectItem itemLabel="OUTROS" itemValue="OUTROS" />
+				<f:selectItem itemLabel="ADMIN" itemValue="ADMIN" />
+			</p:selectOneMenu>
+
 			<p:commandButton id="btnNovo" value="Novo"
-				action="#{usuarioBean.save()}" ajax="false" />
+				action="#{UsuarioBean.save()}" ajax="false"  />
 			<p:commandButton id="btnLimpar" value="Limpar"
-				action="#{usuarioBean.limpar()}" ajax="false" />
+				action="#{UsuarioBean.limpar()}" ajax="false" />
 		</p:panelGrid>
 
 
 		<p:dataTable id="dataTableEntidades" border="1" var="entidade"
-			value="#{usuarioBean.entidades}">
+			value="#{UsuarioBean.entidades}">
 			<p:column>
 				<f:facet name="header">ID</f:facet>
 				<h:outputText value="#{entidade.id}" />
@@ -47,15 +76,7 @@
 			</p:column>
 			<p:column>
 				<f:facet name="header">Sexo</f:facet>
-				<h:outputText value="#{entidade.email}" />
-			</p:column>
-	
-			<p:column>
-				<f:facet name="header">Opções</f:facet>
-				<p:commandButton value="Remover" ajax="false"
-					action="#{usuarioBean.remove(entidade)}"></p:commandButton>
-				<p:commandButton value="Editar" ajax="false"
-					action="#{usuarioBean.editar(entidade.id)}"></p:commandButton>
+				<h:outputText value="#{entidade.sexo}" />
 			</p:column>
 		</p:dataTable>
 	</h:form>
