--- a/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/private/perfil.xhtml
+++ b/ProjetoDAW2-BomTreinoAPP/src/main/webapp/pages/private/perfil.xhtml
@@ -4,29 +4,15 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
-	<title>Gerenciador de Usuário </title>
+	<title>Perfil </title>
 </h:head>
 
 
 <h:body>
 	<p:messages />
-	
-	<h:form id="formMenu">
-		<p:menubar>
-			<f:facet name="options">
-						Olá, #{usuarioBean.userLogin}
-						<p:commandButton id="menuItemLogout" value="Logout"
-					icon="fa fa-fw fa-sign-out" action="#{usuarioBean.efetuarLogout}"
-					ajax="false" />
-			</f:facet>
-		</p:menubar>
-	</h:form>
 
 	<h:form>
-		<p:panelGrid columns="2" rendered="#{usuarioBean.isUserInRole('PROFESSOR')}">
-			<f:facet name="caption">
-				<h:outputText value="Filtros" />
-			</f:facet>
+		<p:panelGrid columns="1" >
 			<f:facet name="header">
 				<h:outputText value="Usuário" />
 			</f:facet>
@@ -42,33 +28,16 @@
 			<p:outputLabel value="Nascimento: " for="nascimentoField" />
 			<p:calendar id="nascimentoField"
 				value="#{usuarioBean.entidade.nascimento}" label="Nascimento" />
-				
-			<p:outputLabel value="Login: " for="loginField" />
-			<p:inputText id="loginField"
-				value="#{UsuarioBean.entidade.username}" label="Login"
-				style="width:350px" />
-
-			<p:outputLabel value="Senha: " for="senhaField" />
-			<p:password id="senhaField"
-				value="#{senhaBean.entidade.senha}" label="Senha"
-				style="width:350px" />
-
-			<p:outputLabel value="Grupo: " for="grupoField" />
-			<p:selectOneMenu id="grupoField" value="#{UsuarioBean.entidade.grupo}"
-				label="Grupo" style="width:350px">
-				<f:selectItem itemLabel="OUTROS" itemValue="OUTROS" />
-				<f:selectItem itemLabel="ADMIN" itemValue="ADMIN" />
-			</p:selectOneMenu>
 
 			<p:commandButton id="btnNovo" value="Novo"
-				action="#{UsuarioBean.save()}" ajax="false"  />
+				action="#{usuarioBean.save()}" ajax="false" />
 			<p:commandButton id="btnLimpar" value="Limpar"
-				action="#{UsuarioBean.limpar()}" ajax="false" />
+				action="#{usuarioBean.limpar()}" ajax="false" />
 		</p:panelGrid>
 
 
 		<p:dataTable id="dataTableEntidades" border="1" var="entidade"
-			value="#{UsuarioBean.entidades}">
+			value="#{usuarioBean.entidades}">
 			<p:column>
 				<f:facet name="header">ID</f:facet>
 				<h:outputText value="#{entidade.id}" />
@@ -78,8 +47,21 @@
 				<h:outputText value="#{entidade.nome}" />
 			</p:column>
 			<p:column>
-				<f:facet name="header">Sexo</f:facet>
-				<h:outputText value="#{entidade.sexo}" />
+				<f:facet name="header">Email</f:facet>
+				<h:outputText value="#{entidade.email}" />
+			</p:column>
+			<p:column>
+				<f:facet name="header">Nascimento</f:facet>
+				<h:outputText value="#{entidade.nascimento}">
+					<f:convertDateTime pattern="dd/MM/yyyy" />
+				</h:outputText>
+			</p:column>
+			<p:column>
+				<f:facet name="header">Opções</f:facet>
+				<p:commandButton value="Remover" ajax="false"
+					action="#{usuarioBean.remove(entidade)}"></p:commandButton>
+				<p:commandButton value="Editar" ajax="false"
+					action="#{usuarioBean.editar(entidade.id)}"></p:commandButton>
 			</p:column>
 		</p:dataTable>
 	</h:form>
